--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Braille Teach</title>
+    <title>Braille Teaching Demo</title>
 
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet" />
+    <!-- Fonts (JetBrains Mono) -->
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet" />
 
-    <!-- Tailwind (if you're using it) -->
+    <!-- Tailwind -->
     <script src="https://cdn.tailwindcss.com"></script>
 
     <style>
@@ -17,47 +17,23 @@
       }
     </style>
   </head>
-  <body class="bg-neutral-100 text-gray-900 min-h-screen flex flex-col px-4 pt-6">
-    <!-- Header -->
-    <header class="w-full text-center mb-12">
-      <h1 class="text-5xl font-extrabold tracking-tight">Braille Teaching Demo</h1>
+  <body class="bg-neutral-100 text-gray-900 min-h-screen flex flex-col px-4 pt-6 items-center">
+    <header class="w-full text-center mb-8">
+      <h1 class="text-4xl font-extrabold">Braille Teaching Demo</h1>
+      <h2 class="text-lg font-medium">Press "Enter" on Perkins Keyboard (or your computer) to begin</h2>
     </header>
 
-    <!-- Main content -->
-    <main class="flex flex-col items-center gap-6">
-      <p class="text-gray-600 text-lg text-center max-w-lg">
-        Feel the word below, then try to type it using the Perkins Keyboard.
-      </p>
+    <main class="flex flex-col items-center gap-4">
+      <input id="wordInput" class="border rounded p-2 w-64 text-center" placeholder="Enter word" />
+      <button id="startBtn" class="bg-blue-500 text-white px-4 py-2 rounded">Start</button>
 
-      <!-- Start button -->
-      <button
-        id="start"
-        class="bg-gray-800 text-white font-medium px-6 py-2 rounded-md hover:bg-gray-900 transition"
-      >
-        Start
-      </button>
+      <div id="output" class="text-lg font-semibold"></div>
+      <div id="braille-display" class="grid grid-cols-2 gap-4 mt-4"></div>
 
-      <!-- Word output -->
-      <div id="output" class="text-xl font-bold mt-2"></div>
 
-      <!-- Braille display grid -->
-      <div
-        id="braille-display"
-        class="grid grid-cols-2 gap-4 mt-6"
-      >
-        <!-- Braille dots go here -->
-      </div>
-
-      <!-- Next letter button -->
-      <button
-        id="next"
-        class="bg-blue-600 text-white font-medium px-4 py-2 rounded-md hover:bg-blue-700 transition hidden"
-      >
-        Next Letter
-      </button>
+      <button id="nextBtn" class="bg-green-600 text-white px-4 py-2 rounded hidden">Next Letter</button>
     </main>
 
-    <!-- JS -->
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
   </body>
 </html>
